fix overflow-x for mobile

--- a/styles/sections.css
+++ b/styles/sections.css
@@ -24,7 +24,7 @@ section {
     }
 }
 
-@media (width >= 35em) {
+@media (width >= 80em) {
     #smartphones-img {
         display: none;
     }
